# hedera-agent-economy

./: .env.example  PITCH_DECK.md  README.md  nixpacks.toml  railway.toml
backend/: Dockerfile  hedera_client.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt
backend-vercel/: requirements.txt
backend-vercel/api/: index.py
backend/agents/: __init__.py  base.py  broker.py  registry.py  settlement.py  worker.py
backend/api/: index.py
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentCard.tsx  EconomyChart.tsx  HederaLogo.tsx  MessageFeed.tsx  StatsBar.tsx  TaskSubmitter.tsx  TransactionLog.tsx
